migrated to a new minimalistic version using shadow-cljs + reagent

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,24 @@
-/resources/public/js/compiled/**
-figwheel_server.log
-pom.xml
+*.apk
 *jar
-/lib/
-/classes/
-/out/
-/target/
+.clj-kondo/.cache/
+.eastwood
 .lein-deps-sum
-.lein-repl-history
 .lein-plugins/
-.repl
+.lein-repl-history
 .nrepl-port
+.pnp.cjs
+.pnp.loader.mjs
+.rebel_readline_history
+.repl
+.shadow-cljs/
+.yarn/
+classes/
+logs/gc.log*
+logs/out.log
+node_modules/
+package-lock.json
+public/js/
+resources/public/assets/
+target/
+yarn*
+.cpcache/
