The system uses commit-hash now

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,25 @@
 *.apk
-*jar
+classes/
 .clj-kondo/.cache/
+.cpcache/
 .eastwood
+*jar
 .lein-deps-sum
 .lein-plugins/
 .lein-repl-history
-.nrepl-port
-.pnp.cjs
-.pnp.loader.mjs
-.rebel_readline_history
-.repl
-.shadow-cljs/
-.yarn/
-classes/
 logs/gc.log*
 logs/out.log
 node_modules/
+.nrepl-port
 package-lock.json
+.pnp.cjs
+.pnp.loader.mjs
 public/js/
+.rebel_readline_history
+.repl
 resources/public/assets/
+resources/public/.commit_hash
+.shadow-cljs/
 target/
+.yarn/
 yarn*
-.cpcache/
