--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "license": "UNLICENSED",
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
     "react-refresh": "^0.16.0",
-    "shadow-cljs": "^2.28.20"
+    "shadow-cljs": "^2.28.20",
+    "tailwindcss": "^3.4.17"
   }
 }
