--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "react-refresh": "^0.16.0",
     "shadow-cljs": "^2.28.20",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.0.6",
+    "@tailwindcss/cli": "^4.0.6"
   }
 }
